--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-gravatar": "^2.6.3",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "react-scrollbar": "^0.5.6"
   },
