--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
+    "formik": "^1.5.4",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "react": "^16.8.6",
@@ -10,7 +13,8 @@
     "react-gravatar": "^2.6.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
-    "react-scrollbar": "^0.5.6"
+    "react-scrollbar": "^0.5.6",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
